<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/textview"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/app_name"/>
        <Button
            android:id="@+id/btnLatestArticles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_articles" />

        <Button
            android:id="@+id/btnLatestComments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_comments" />
        
        <Button
            android:id="@+id/btnAuthors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors" /> 
            
        <Button
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" /> 
            
        <TextView 
          android:id="@+id/statusMsg"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/defstatus"/>
        

</LinearLayout>